@@ -110,8 +110,7 @@ The \*(T<\fIexamples/\fR\*(T> directory contains
 some example configuration files.
 
 .nf
-\*(T<
-[xboxdrv]
+\*(T<[xboxdrv]
 silent=true
 deadzone=6000
 dpad\-as\-button=true
